force-app/main/default/objects/UserDetail__c/UserDetail__c.object-meta.xml
<CustomObject>
    <label>UserDetail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>