force-app/main/default/objects/UserDetail__c/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>