force-app/main/default/objects/UserDetail__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager</label>
    <type>Checkbox</type>
</CustomField>