force-app/main/default/objects/UserDetail__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Name</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>User Details</relationshipLabel>
    <relationshipName>User_Details</relationshipName>
    <type>Lookup</type>
</CustomField>