force-app/main/default/objects/UserDetail__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>