force-app/main/default/objects/UserDetail__c/validationRules/AgeCorrection.validationRule-meta.xml
<ValidationRule>
    <fullName>AgeCorrection</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR( ( TODAY() - Birthday__c ) / 365.25 ) &gt; Age__c</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Give the correct age</errorMessage>
</ValidationRule>